[package]
name = "portscanner"
version = "0.1.0"
edition = "2021"
description = "Rust ile yazılmış hızlı ve gelişmiş port tarayıcı"
license = "MIT"


[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
clap = { version = "4.5.41", features = ["derive"] }
url = "2.5"
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.19.0"
dns-lookup = "2.0.4"
